tests/pos/i9996.scala
def takesId(f: [T] => (t: T) => t.type): Int = f(1)
